add JEP336 doc